--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/blue"
     tools:context=".activity.SplashActivity">
 
 
@@ -12,7 +12,7 @@
         android:layout_height="160dp"
         android:layout_above="@+id/txtAppName"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/app_logo" />
+        android:src="@drawable/gla" />
 
     <TextView
         android:id="@+id/txtAppName"
@@ -21,7 +21,7 @@
         android:layout_centerInParent="true"
         android:fontFamily="@font/poppins_medium"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:text="Gla Food Ordering"
         android:textColor="@android:color/white"
         android:textSize="40sp"
         android:textStyle="bold" />
